Added new curriculum styles -more up to date is 'modern'

--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -14,8 +14,7 @@
         \vspace{2em}
         \email{davidlegarre1@gmail.com} $\cdot$
         \phone{+34 684 21 33 79} \par \vspace{0.5em}
-        \address{Barcelona, Spain} $\cdot$
-        \linkedin{https://www.linkedin.com/in/david-legarre-saavedra/}{David-Legarre-Saavedra}
+        \address{Barcelona, Spain}
     \end{minipage}
 
 \end{tcolorbox}
@@ -27,13 +26,15 @@
     \vspace*{-0.5em}
     \begin{minipage}[t]{0.3\textwidth} % Side Panel (e.g. Skills, Links, Languages, etc.)
         \begin{tcolorbox}[height=0.8\textheight, grow to left by=0.6cm,colback=backdrop,colframe=backdrop,arc=0mm]
-
+            
+            \github{https://github.com/DavidLegarre}{DavidLegarre}\\
+            \linkedin{https://www.linkedin.com/in/david-legarre-saavedra/}{David-Legarre-Saavedra}\\
+            \kaggle{https://www.kaggle.com/davidlegarresaavedra}{DavidLegarreSaavedra}
             % Skills, the skill level is drawn as bars, input: skill name and an array starting from 0 and ending before 4
             \subsection*{Programming Languages and Tools}
             \skill{Python}{0, 1, 2, 3}
             \skill{MySQL}{0,1,2,3}
             \skill{R}{0,1,2}
-            \skill{Power Bi}{0,1,2}
             \skill{C}{0,1}
             \skill{Java}{0,1}
 
@@ -41,6 +42,10 @@
             \lan{Spanish}{0, 1, 2, 3, 4}
             \lan{Catalan}{0, 1, 2, 3, 4}
             \lan{English}{0, 1, 2, 3}
+            \subsection*{Tools}
+                GitHub, Pytorch,  OpenCV, Seaborn Matplotlib, Keras,
+                Tensorflow, Google Collab, Linux Terminal, MySQL, Google Sheets
+                Power Bi, Excel
         \end{tcolorbox}
     \end{minipage}
     \begin{minipage}[t]{0.7\textwidth} % Main Panel (e.g. Education, Work Experience)
@@ -49,7 +54,8 @@
             % Profile Section
             \section*{About Me}
             Recent graduate of a Bachelor's degree in Mathematical Engineering on 
-            Data Science.  I am passionate about using data to drive insights and 
+            Data Science. I am a quick learner and flexible. 
+            I am passionate about using data to drive insights and 
             solve complex problems, and I am looking for new opportunities to apply
             my skills and continue learning. 
 
@@ -79,12 +85,11 @@
                 Bachelor Thesis ''Deep Learning Methods for MRI coil Channel Optimization'' done in collaboration with 
                 General Electric Helthcare and L'Hospital Clínic de Barcelona.
                 A project in which Computer Vision and Deep Learning algorithms are used
-                to improve the quaility by reducing the noise in MRI scans
+                to improve the quaility by reducing the noise in MRI scans\\
             }
-            \section*{Tools}
-                GitHub, Pytorch,  OpenCV, Seaborn Matplotlib, Keras,\\
-                Tensorflow, Google Collab, Linux Terminal, MySQL, Google Sheets\\
-                Power Bi, Excel
+            \comeducation{English C1 Advanced- 190}{Jul 2018}{
+                Cambridge University Assesment English
+            }
         \end{tcolorbox}
     \end{minipage}
 \end{tcolorbox}
