--- a/Modern/English/David_Legarre_CV_Eng.tex
+++ b/Modern/English/David_Legarre_CV_Eng.tex
@@ -29,20 +29,20 @@
         \begin{tcolorbox}[height=0.8\textheight, grow to left by=0.6cm,colback=backdrop,colframe=backdrop,arc=0mm]
             
             \github{https://github.com/DavidLegarre}{DavidLegarre}\\
-            \linkedin{https://www.linkedin.com/in/david-legarre-saavedra/}{David-Legarre-Saavedra}\\
-            \kaggle{https://www.kaggle.com/davidlegarresaavedra}{DavidLegarreSaavedra}
+            \linkedin{https://www.linkedin.com/in/david-legarre-saavedra/}{david-legarre-saavedra}\\
+            \kaggle{https://www.kaggle.com/davidlegarresaavedra}{davidlegarresaavedra}
             % Skills, the skill level is drawn as bars, input: skill name and an array starting from 0 and ending before 4
-            \subsection*{Programming Languages and Tools}
+            \subsection*{Programming Languages}
             \skill{Python}{0, 1, 2, 3, 4}
-            \skill{SQL}{0,1,2,3}
-            \skill{R}{0,1,2}
-            \skill{C}{0,1}
-            \skill{Java}{0,1}
+            \skill{SQL (MySQL)}{0,1,2,3}
+            \skill{R}{0,1,2,3}
+            \skill{Java}{0,1,2}
+            \skill{C/C++}{0,1}
 
             \subsection*{Languages}
             \lan{Spanish}{0, 1, 2, 3, 4}
             \lan{Catalan}{0, 1, 2, 3, 4}
-            \lan{English}{0, 1, 2, 3}
+            \lan{English}{0, 1, 2, 3, 4}
         \end{tcolorbox}
     \end{minipage}
     \begin{minipage}[t]{0.7\textwidth} % Main Panel (e.g. Education, Work Experience)
@@ -51,14 +51,20 @@
             % Profile Section
             \section*{About Me}
             Recent graduate of a Bachelor's degree in Mathematical Engineering on 
-            Data Science, I am a quick learner and flexible. 
+            Data Science (Big Data), I am a quick learner and flexible. 
             I am passionate about using data to drive insights and 
             solve complex problems, and I am looking for new opportunities to apply
             my skills and continue learning. 
 
             % Work Experience
             \section*{Work Experience}
-            \work{Data Scientist}{Oct 2021 - Sept 2022}{Accenture}{
+            \work{Data Scientist Jr.}{Oct 2023 - Present}{Factor Energia}{
+                Worked deploying Large Language Models (LLM) of OpenAI to improve customer support. 
+                \begin{itemize}
+                    \item 
+                \end{itemize}
+            }
+            \work{Data Analyst}{Oct 2021 - Sept 2022}{Accenture}{
                 Worked in several projects as a data scientist, performing Data Exploration and building predictive models
                 \begin{itemize}
                     \item Conducted data analysis and modeling to support client projects.
@@ -67,30 +73,27 @@
                     models and algorithms using machine learning techniques such
                     as: linear regression, decision trees,
                     random forests and K-means.
+                    \item Data Visualization and dashborad presentations: Using python and R for visualization and Power BI for the dashboards.
                 \end{itemize}
             }
 
             % Education
             \section*{Education}
-            \education{BSc in Mathematical Engineering on Data Science}{Sep 2018 - Mar 2023}{Universitat Pompeu Fabra}{
-                Skills:
-                \begin{itemize}
-                    \item Machine Learning \& Deep Learning: Pytorch and Scikit-learn
-                    \item Statistical Methods for Data Science
-                    \item Large-Scale Distributed Systems
-                    \item Parallel \& Distributed Programming
-                    \item Data Visualization: Power Bi and Tableau
-                    \item Data Engineering: AWS, Hadoop, PySpark
-                \end{itemize}
-                
+            \education{BSc in Mathematical Engineering on Data Science (Big Data)}{Sep 2018 - Mar 2023}{Universitat Pompeu Fabra}{
                 Bachelor Thesis ``Deep Learning Methods for MRI coil Channel Optimization'' done in collaboration with 
-                General Electric Helthcare and L'Hospital Clínic de Barcelona.
-                A project in which Computer Vision and Deep Learning algorithms are used
-                to improve the quaility by reducing the noise in MRI scans\\
+                General Electric Healthcare and L'Hospital Clínic de Barcelona.
+                A project in which Computer Vision and Deep Learning algorithms were used
+                to improve the quality by reducing the noise in MRI scans.
+                Centered around cardiology and Magnetic Resonances scans\\
             }
-            \comeducation{English C1 Advanced- 190}{Jul 2018}{
-                Cambridge University Assesment English
-            }
+          \section*{Tools and Skills}
+          \begin{itemize}
+            \item Python (Numpy, Pandas, matplotlib), Git
+            \item Machine Learning \& Deep Learning: Pytorch, Tensorflow and Scikit-learn
+            \item Data Visualization: Power Bi and Tableau
+            \item Data Engineering: AWS, Google BigQuery, PySpark
+            \item Communication, adaptability, Teamwork
+          \end{itemize}
         \end{tcolorbox}
     \end{minipage}
 \end{tcolorbox}
