--- a/Modern/English/setup/macros.tex
+++ b/Modern/English/setup/macros.tex
@@ -125,7 +125,7 @@
     \vspace{0.3em}
     % School Name 
     \large
-    \noindent \color{title} \parbox{.7\linewidth}{\textsl{#3}} \par
+    \noindent \color{gray} \parbox{.7\linewidth}{\textsl{#3}} \par
     % Description
     \normalsize \color{black}
     \vspace*{0.3em}
@@ -142,7 +142,7 @@
     \tcbox[enhanced,box align=base,nobeforeafter,colback=title,colframe=title,size=fbox,arc=0mm]{\textbf{#2}} \par
     \vspace{0.3em}
     % Name of the Employer
-    \noindent \large \color{title} \parbox{.7\linewidth}{\textsl{#3}} \par
+    \noindent \large \color{gray} \parbox{.7\linewidth}{\textsl{#3}} \par
     % Description of the job
     \vspace*{0.3em} \color{black}
     \small #4 
