Revert "CV backup"
This reverts commit bde1a40f37179873e04a83e6a8910eae9943c878.

--- a/Modern/English/David_Legarre_CV_Eng.tex
+++ b/Modern/English/David_Legarre_CV_Eng.tex
@@ -61,7 +61,7 @@
             \work{Data Scientist Jr.}{Oct 2023 - Present}{Factor Energia}{
                 Worked deploying Large Language Models (LLM) of OpenAI to improve customer support. 
                 \begin{itemize}
-                    \item  Test
+                    \item 
                 \end{itemize}
             }
             \work{Data Analyst}{Oct 2021 - Sept 2022}{Accenture}{
